[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main Menu/8bitOperatorPlus8-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main Menu/bghs.jpg" type="Texture" id=2]
[ext_resource path="res://Main Menu/High Scores.gd" type="Script" id=3]
[ext_resource path="res://Main/Textures/ButtonSound.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0.168627, 0.305882, 0.682353, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
alignment = 1

[node name="TitleVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 314.0
margin_right = 685.0
margin_bottom = 576.0
custom_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/HBoxContainer/TitleVBox"]
margin_right = 371.0

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/TitleVBox"]
margin_top = 60.0
margin_right = 371.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "High Scores"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TitleVBox"]
margin_top = 163.0
margin_right = 371.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( -430, -26 )

[node name="Top1" type="Label" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_right = 371.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )

[node name="Separator" type="Control" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 33.0
margin_right = 371.0
margin_bottom = 33.0

[node name="Top2" type="Label" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 37.0
margin_right = 371.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 70.0
margin_right = 371.0
margin_bottom = 70.0

[node name="Top3" type="Label" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 74.0
margin_right = 371.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 2 )

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 107.0
margin_right = 371.0
margin_bottom = 107.0

[node name="Top4" type="Label" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 111.0
margin_right = 371.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 144.0
margin_right = 371.0
margin_bottom = 144.0

[node name="Top5" type="Label" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 148.0
margin_right = 371.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 2 )

[node name="Separator5" type="Control" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 181.0
margin_right = 371.0
margin_bottom = 181.0

[node name="Play" type="Button" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
modulate = Color( 0.168627, 0.254902, 0.807843, 1 )
margin_top = 185.0
margin_right = 371.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="Separator6" type="Control" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
margin_top = 224.0
margin_right = 371.0
margin_bottom = 224.0

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer"]
modulate = Color( 0.168627, 0.254902, 0.807843, 1 )
margin_top = 228.0
margin_right = 371.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TitleVBox/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
